# pardiso

./: .gitignore  README.md
PanuaPardiso/: .gitignore  README.md  compile.sh  pardiso_samsung.cpp  pardiso_sym.cpp  pardiso_unsym.cpp  setup.sh
PyPardiso/: .gitignore  README.md  pardiso_main.py  pardiso_residual.py  save_in_npy.py  script.sh  validate_solution.py
STRUMPACK/: README.md
STRUMPACK/mytest/: CMakeLists.txt  sp.cpp  sp_mpi.cpp
